--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 23
+    buildToolsVersion '25'
 
     defaultConfig {
         applicationId "net.dowhile.imageseeker"
@@ -26,10 +26,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    //compile 'com.android.support:cardview-v7'
+    //compile 'com.android.support:design'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'org.jetbrains.anko:anko-sdk15:0.9' // sdk19, sdk21, sdk23 are also available
     compile 'org.jetbrains.anko:anko-support-v4:0.9' // In case you need support-v4 bindings
@@ -38,10 +38,9 @@ dependencies {
     //异步网络图片加载
     compile 'com.github.bumptech.glide:glide:3.5.2'
     //约束布局
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
+    //compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     //HUD
     compile 'com.kaopiz:kprogresshud:1.0.5'
-
     //Network
     compile 'com.github.kittinunf.fuel:fuel:1.3.1' //for JVM
     compile 'com.github.kittinunf.fuel:fuel-android:1.3.1' //for Android
