--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ android {
     compileSdkVersion 23
     buildToolsVersion '25'
 
+    //为了解决部分第三方库重复打包了META-INF的问题
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+    lintOptions {
+        abortOnError false
+    }
     defaultConfig {
         applicationId "net.dowhile.imageseeker"
         minSdkVersion 15
@@ -24,15 +32,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //compile 'com.android.support:cardview-v7'
     //compile 'com.android.support:design'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'org.jetbrains.anko:anko-sdk15:0.9' // sdk19, sdk21, sdk23 are also available
-    compile 'org.jetbrains.anko:anko-support-v4:0.9' // In case you need support-v4 bindings
+    compile 'org.jetbrains.anko:anko-sdk15:0.9'
+    // sdk19, sdk21, sdk23 are also available
+    compile 'org.jetbrains.anko:anko-support-v4:0.9'
+    // In case you need support-v4 bindings
     compile 'org.jetbrains.anko:anko-appcompat-v7:0.9'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //异步网络图片加载
@@ -42,9 +52,19 @@ dependencies {
     //HUD
     compile 'com.kaopiz:kprogresshud:1.0.5'
     //Network
-    compile 'com.github.kittinunf.fuel:fuel:1.3.1' //for JVM
-    compile 'com.github.kittinunf.fuel:fuel-android:1.3.1' //for Android
-    compile 'com.github.kittinunf.result:result:1.0.3' //Result
+    compile 'com.github.kittinunf.fuel:fuel:1.3.1'
+    //for JVM
+    compile 'com.github.kittinunf.fuel:fuel-android:1.3.1'
+    //for Android
+    compile 'com.github.kittinunf.result:result:1.0.3'
+    //Result
+    // LeanCloud 基础包
+    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
+    // LeanCloud 统计包
+    compile 'cn.leancloud.android:avoscloud-statistics:v3.+'
+    // LeanCloud 用户反馈包
+    compile 'cn.leancloud.android:avoscloud-feedback:v3.+@aar'
+    compile files('libs/YoumiSdk_v7.0.1_2017-01-06.jar')
 }
 repositories {
     jcenter()
