--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     // LeanCloud 用户反馈包
     compile 'cn.leancloud.android:avoscloud-feedback:v3.+@aar'
     compile files('libs/YoumiSdk_v7.0.1_2017-01-06.jar')
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
 repositories {
     jcenter()
